# kset

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  main.h
tests/: CMakeLists.txt  test_sum.c
