CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(hello-kset)
ADD_DEFINITIONS(-Os -Wall --std=gnu11 -Wmissing-declarations -Wno-unused-variable -Wno-unused-function -D_GNU_SOURCE)

INCLUDE_DIRECTORIES(include)
FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/build/modules")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(SOURCES src/main.c)

ADD_EXECUTABLE(hello-kset ${SOURCES})

FIND_PACKAGE(LIBUBOX REQUIRED)
INCLUDE_DIRECTORIES(${LIBUBOX_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(hello-kset ${LIBUBOX_LIBRARIES})

INSTALL(TARGETS hello-kset RUNTIME DESTINATION usr/bin)
