SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/tests)

SET(CMAKE_C_FLAGS "-DPROJECT_LOCATION=${CMAKE_SOURCE_DIR}")

ADD_EXECUTABLE(sum test_sum.c)
TARGET_LINK_LIBRARIES(sum libhello-kset ${CMOCKA_LIBRARIES})
LIST(APPEND tests sum)

FIND_PROGRAM(VALGRIND_FOUND valgrind)
IF(VALGRIND_FOUND)
	FOREACH(test ${tests})
		ADD_TEST(NAME ${test} COMMAND valgrind --leak-resolution=low --show-leak-kinds=all ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${test})
	ENDFOREACH()
ELSE(VALGRIND_FOUND)
	FOREACH(LETTER ${tests})
		ADD_TEST(NAME ${test} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${test})
	ENDFOREACH()
ENDIF(VALGRIND_FOUND)
